--- a/ChuanKou.vbproj
+++ b/ChuanKou.vbproj
@@ -61,8 +61,8 @@
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="System.Net.Http" />
-    <Reference Include="WUDGC">
-      <HintPath>..\OIS.net\WUDGC\bin\Debug\WUDGC.dll</HintPath>
+    <Reference Include="UCT">
+      <HintPath>UCT\bin\Debug\UCT.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
